--- a/index.html
+++ b/index.html
@@ -10,31 +10,36 @@
 </head>
 <body>
     <h1>Star Wars RPG!</h1>
-    <section class="characters-area">
+    <section class="characters-section">
+        <h3>Characters Section</h5>
         <div class="character">
             <h4>Obi-Wan Kenobi</h4>
-            <img src="assets/images/obi-wan-kenobi.jpg" alt="Obi wan Kenobi" base-power="8" attack-power="8">
+            <img src="assets/images/obi-wan-kenobi.jpg"  alt="Obi wan Kenobi" base-power="8" attack-power="8" health-points="120">
             <p class="hp">120</p>
         </div>
         <div class="character">
             <h4>Luke Skywalker</h4>
-            <img src="assets/images/luke-skywalker.jpeg" alt="Luke Skylwalker" base-power="5" attack-power="5">
+            <img src="assets/images/luke-skywalker.jpeg"  alt="Luke Skylwalker" base-power="5" attack-power="5" health-points="100">
             <p class="hp">100</p>
         </div>
         <div class="character">
             <h4>Darth Sidious</h4>
-            <img src="assets/images/darth sidious.png" alt="Darth Sidious">
+            <img src="assets/images/darth sidious.png"  alt="Darth Sidious" base-power="20" attack-power="20" health-points="150">
             <p class="hp">150</p>
         </div>
         <div class="character">
             <h4>Kylo Ren</h4>
-            <img src="assets/images/kylo ren.jpg" alt="Kylo Ren" counter-attack="25">
+            <img src="assets/images/kylo ren.jpg"  alt="Kylo Ren" base-power="28" attack-power="28" health-points="180">
             <p class="hp">180</p>
         </div>
     </section>
-    <div class="enemies"></div>
-    <div class="oponent"></div>
-    
+    <section class="enemies-section">
+        <h3>Enemies Section</h5>
+    </section>
+    <section class="oponent-section">
+        <h3>Oponent</h3>
+    </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 </body>
 </html>
