--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <h1>Star Wars RPG!</h1>
     <section class="characters-section">
         <h3>Characters Section</h5>
-        <div class="character player">
+        <div class="character player" base-power="8" counter-attack-power="8" health-points="120">
             <h4>Obi-Wan Kenobi</h4>
-            <img src="assets/images/obi-wan-kenobi.jpg"  alt="Obi wan Kenobi" base-power="8" attack-power="8" health-points="120">
+            <img src="assets/images/obi-wan-kenobi.jpg"  alt="Obi wan Kenobi" >
             <p class="hp">120</p>
         </div>
-        <div class="character player">
+        <div class="character player" base-power="15" counter-attack-power="5" health-points="100">
             <h4>Luke Skywalker</h4>
-            <img src="assets/images/luke-skywalker.jpeg"  alt="Luke Skylwalker" base-power="5" attack-power="5" health-points="100">
+            <img src="assets/images/luke-skywalker.jpeg"  alt="Luke Skylwalker" >
             <p class="hp">100</p>
         </div>
-        <div class="character player">
+        <div class="character player" base-power="2" counter-attack-power="20" health-points="150">
             <h4>Darth Sidious</h4>
-            <img src="assets/images/darth sidious.png"  alt="Darth Sidious" base-power="20" attack-power="20" health-points="150">
+            <img src="assets/images/darth sidious.png"  alt="Darth Sidious" >
             <p class="hp">150</p>
         </div>
-        <div class="character player">
+        <div class="character player" base-power="1" counter-attack-power="28" health-points="180">
             <h4>Kylo Ren</h4>
-            <img src="assets/images/kylo ren.jpg"  alt="Kylo Ren" base-power="28" attack-power="28" health-points="180">
+            <img src="assets/images/kylo ren.jpg"  alt="Kylo Ren" >
             <p class="hp">180</p>
         </div>
 
@@ -40,9 +40,16 @@
         <div class="enemies"></div>
     </section>
 
+    <section class="fight-section">
+            <h3>Fight Section</h5>
+            <button class="fight">Fight!</button>
+            <p></p>
+    </section>
+
     <section class="oponent-section">
         <h3>Oponent</h3>
     </section>
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/game.js"></script>
 
