player can choose a new opponent until the game is over

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <p></p>
     </section>
 
-    <section class="oponent-section">
-        <h3>Oponent</h3>
+    <section class="opponent-section">
+        <h3>Opponent</h3>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
