added a background image to the files and to the body css

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 
     <h1>Star Wars RPG!</h1>
+
     <section class="characters-section">
         <h3>Characters Section</h5>
         <div class="character player" base-power="8" counter-attack-power="8" health-points="120">
@@ -33,10 +34,10 @@
             <img src="assets/images/kylo ren.jpg"  alt="Kylo Ren" >
             <p class="hp">180</p>
         </div>
-
     </section>
+
     <section class="enemies-section">
-        <h3>Enemies Section</h5>
+        <h3>Enemies Available to Attack</h5>
         <div class="enemies"></div>
     </section>
 
@@ -47,7 +48,11 @@
     </section>
 
     <section class="opponent-section">
-        <h3>Opponent</h3>
+        <h3>Defender</h3>
+    </section>
+
+    <section class="status-section">
+        <div class="status"></div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
