reset button makes the whole game restart once more. Bug in unexistent classes not been able to clicked is fixed. Need to delete status after reseting the game

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <h1>Star Wars RPG!</h1>
 
+    <h3>Characters Section</h5>
     <section class="characters-section">
-        <h3>Characters Section</h5>
         <div class="character player" base-power="8" counter-attack-power="8" health-points="120">
             <h4>Obi-Wan Kenobi</h4>
             <img src="assets/images/obi-wan-kenobi.jpg"  alt="Obi wan Kenobi" >
@@ -36,23 +36,22 @@
         </div>
     </section>
 
+    <h3>Enemies Available to Attack</h3>
     <section class="enemies-section">
-        <h3>Enemies Available to Attack</h5>
         <div class="enemies"></div>
     </section>
 
+    <h3>Fight Section</h3>
     <section class="fight-section">
-        <h3>Fight Section</h5>
         <button class="fight">Fight!</button>
-        <p></p>
     </section>
 
+    <h3>Defender</h3>
     <section class="opponent-section">
-        <h3>Defender</h3>
     </section>
 
     <section class="status-section">
-        <div class="status"></div>
+        <p class="status"></div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
